--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -18,7 +18,7 @@
                     <%- include('./partials/validation')%>
                     <div class="correo-contra">
                         <label for="email" class="label-correo">Correo electrónico</label>
-                        <input type="email" name="email" id="correo" required>
+                        <input type="email" name="email" id="correo" placeholder="email@ejemplo.com" required>
 
                         <label for="password" class="label-contra">Contraseña</label>
                         <input type="password" name="password" id="contraseña" required>
