--- a/src/views/partials/footer-1.ejs
+++ b/src/views/partials/footer-1.ejs
@@ -54,7 +54,7 @@
                 <form class="form-footer">
                     <h5>Sumate al newsletter</h5>
         
-                    <input type="email" placeholder="tuemail@ejemplo.com" class="email" required="">
+                    <input type="email" placeholder="email@ejemplo.com" class="email" required="">
         
                     <div class="terminos">
                         <input type="checkbox" name="datos" value="email" required>
