--- a/src/views/partials/header-1.ejs
+++ b/src/views/partials/header-1.ejs
@@ -1,4 +1,4 @@
-<header>
+<header class="sombra-nav">
     <a href="/" class="carmakers-nav"><h1>CARMAKERS</h1></a>
     <nav>
             <ul class="ul-enlaces">
