--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -15,19 +15,49 @@
                     <div class="correo-contra">
 
                         <label for="nombres" class="label-correo">Nombres</label>
-                        <input type="text" name="nombres" id="nombre" required>
+                        <input type="text" name="nombres" id="nombre" value="<%= locals.oldData ? oldData.nombres : null %>">
+                        <% if(locals.errors && errors.nombres) { %>
+                            <div class="text-danger">
+                                <%= errors.nombres.msg %>
+                            </div>
+                            
+                        <% } %>
 
                         <label for="apellidos" class="label-correo">Apellidos</label>
-                        <input type="text" name="apellidos" id="apellido" required>
+                        <input type="text" name="apellidos" id="apellido" value="<%= locals.oldData ? oldData.apellidos : null %>">
+                        <% if(locals.errors && errors.apellidos) { %>
+                            <div class="text-danger">
+                                <%= errors.apellidos.msg %>
+                            </div>
+                            
+                        <% } %>
 
                         <label for="email" class="label-correo">Correo electrónico</label>
-                        <input type="email" name="email" id="correo" required>
+                        <input type="email" name="email" id="correo" value="<%= locals.oldData ? oldData.email : null %>">
+                        <% if(locals.errors && errors.email) { %>
+                            <div class="text-danger">
+                                <%= errors.email.msg %>
+                            </div>
+                            
+                        <% } %>
 
                         <label for="password" class="label-contra">Contraseña</label>
-                        <input type="password" name="password" id="contraseña" required>
+                        <input type="password" name="password" id="contraseña">
+                        <% if(locals.errors && errors.password) { %>
+                            <div class="text-danger">
+                                <%= errors.password.msg %>
+                            </div>
+                            
+                        <% } %>
 
                         <label for="imgPerfil" class="label-correo">Sube una imágen de perfil</label>
-                        <input accept="image/png,image/jpeg, image/jpg" type="file" name="imgPerfil" id="imgPerfil" required> 
+                        <input accept="image/png,image/jpeg, image/jpg" type="file" name="imgPerfil" id="imgPerfil">
+                        <% if(locals.errors && errors.imgPerfil) { %>
+                            <div class="text-danger">
+                                <%= errors.imgPerfil.msg %>
+                            </div>
+                            
+                        <% } %>
                         
                     </div>
                     
