--- a/src/views/profile.ejs
+++ b/src/views/profile.ejs
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
     <%- include('./partials/head')%>
-<body class="body-reg">
+<body class="body-login">
+
     <%- include('./partials/header-2')%>
     <%- include('./partials/menuResponsive')%>
     <div class="container-blur" id="filter"></div>
+    
     <main>
-        <h1>¡Hola <%= usuario.nombres %>!</h1>
-        <div><%=usuario.imgPerfil%></div>
+        <article class="perfil">
+            <div><img src="/imgs/imgsPerfil/<%= user.imgPerfil%>" alt="Imágen de perfil"></div>
+            <h1><%= user.nombres + " " + user.apellidos%> </h1>
+            <h2><%= user.email %> </h2>
+            <button type="button"><a href="/users/logout">Cerrar sesión</a></button>
+        </article>
+    
     </main>
 
         <%- include('./partials/footer-2')%>
