--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,6 +8,7 @@
     <div class="container-blur" id="filter"></div>
 
     <main>
+        <div clas="big-container">
         <section id="main-section-index">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -100,7 +101,7 @@
 
         </section>
 
-
+    </div>
     </main>
 
     <%- include('./partials/footer-1')%>
