se arreglan cuestiones del crud de productos, multer

--- a/src/views/editarproducto.ejs
+++ b/src/views/editarproducto.ejs
@@ -19,7 +19,7 @@ Precio (p​ rice​)
 
 
                 <div class="single-column">
-                    <form action="/products/<%= productToEdit.idModelo %>/editar?_method=PUT" method="POST" class="form-login">
+                    <form action="/products/<%= productToEdit.idModelo %>/editar?_method=PUT" method="POST" class="form-login" enctype="multipart/form-data">
 
                     <h2 class="titulo-login">Editar Producto</h2>
 
