Arreglado error secciones

--- a/src/views/partials/secciones.ejs
+++ b/src/views/partials/secciones.ejs
@@ -1,8 +1,6 @@
-<% for(i=0; i<6; i++) { %>
+<% for(i=0; i < productos.length; i++) { %>
 
-    <% console.log(productos) %>
-
-    <section id="seccion-<%=(i)%>">
+    <section id="seccion-<%=(i+1)%>">
 
         <div class="texto-uno">
             <h2 class="nombre-auto-uno">Modelo <%= i + 1 %> </h2>
