--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -17,25 +17,29 @@
 /*MENU FLEX*/
 
 .container-blur{
+    transition: all 500ms ease-in-out;
     width:100%;
     height: 100vh;
     position:fixed;
     z-index: 100;
-    opacity: 1;
-    display: none;
+    display: block;
+    opacity: 0;
+    visibility: hidden;
 }
 
 #filter{
+    transition: all 500ms ease-in-out;
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     background-color: rgba(0, 0, 0, 0.1);
     z-index: 100;
-    opacity: 1;
-    display: none;
+    opacity: 0;
+    display: block;
+    visibility: hidden;
 }
 
 .enlaces-menu{
-    transition: all 500ms ease;
+    transition: all 500ms ease-in-out;
     position: fixed;
     top: 0px;
     bottom: 0;
@@ -125,20 +129,21 @@
 }
 
 .container-blur.activado{
-    display: block;
-    animation: muestraBlur 500ms ease-in-out both;
+    visibility: visible;
+    opacity:1;
 }
 
 #filter.activado{
-    display: block;
-    animation: muestraBlur 500ms ease-in-out both;
+    visibility: visible;
+    opacity:1;
 }
 
+/*
 @keyframes muestraBlur{
     from{opacity:0}
     to{opacity:1}
 }
-
+*/
 
 /*NAV COMUN*/
 
