--- a/src/views/partials/secciones.ejs
+++ b/src/views/partials/secciones.ejs
@@ -9,7 +9,7 @@
     
         <div class="botones-container">
         <div class="botones">
-            <a href="/products/detalleproducto/<%= productos[i].idModelo %>">
+            <a href="/products/detail/<%= productos[i].idModelo %>">
                 <button type="button" class="saber-mas">SABER MÁS</i></button>
             </a>
     
@@ -22,7 +22,7 @@
     </div>
     
     <div class="icon-arrow">
-        <a href="#seccion-<%=(i+1)%>"><i class="fas fa-solid fa-angle-down"></i></a>
+        <a href="#seccion-<%=(i)%>"><i class="fas fa-solid fa-angle-down"></i></a>
     </div>
     </section>
 
