--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -12,6 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="shortcut icon" type="img/png" href="/imgs/favicon2.png">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;500;600;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b12fa36c29.js" crossorigin="anonymous"></script>
     <title>CarMakers</title>
