--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,103 +8,19 @@
     <div class="container-blur" id="filter"></div>
 
     <main>
-        <div clas="big-container">
-        <section id="main-section-index">
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="/imgs/banner1.jpg" class="d-block w-100" alt="..." id="banner-uno">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="\imgs\banner2.jpg" class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="\imgs\banner3.jpg" class="d-block w-100" alt="...">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-                
-                <!--
-                <div class="texto-principal">
-                    <h2 class="nombre-auto">Modelo 1</h2>
-                    <h3 class="desc-auto">Hecho para la vida real</h3>
-                </div>
-                -->
-
-              </div>
-
-              <div class="box-container">
-                  <form action='/' method="GET" class="elements-container">
+        <section class="main-section-index">
+                <h2 class="titulo-carmakers">CARMAKERS</h2>
+                <div class="button-input">
+                    <form action='/' method="GET" class="searchbar-form">
                         <input type="text" placeholder="Modelos, características, servicios" class="search" required="">
                         <button type="submit" class="boton-lupa"><i class="fas fa-search" id="icono-lupa"></i></button>
-                  </form>
-              </div>
-
-              <div class="icon-arrow-main">
-                <a href="#seccion-1"><i class="fas fa-solid fa-angle-down"></i></a>
-            </div>
-
+                    </form>
+                </div>
         </section>
         
-        <article class="article-wpp">
-            <div class="wpp-container">
-                <button type="button" ><img src="\imgs\wpp.png" alt="Whatsapp"></button>
-            </div>
-        </article>
-        </section>
-
-
-        
-       <%- include ('./partials/secciones') %>
-
-
-        <section class="cincopasos" id="seccion-6">
-            <h6>PODÉS TENER TU AUTO EN 5 PASOS</h6>
-
-        <div class="ambos-container">
-            <div class="grid-container-uno">
-                <div class="grid-item"><i class="fa-solid fa-car"></i><span class="span-num">1</span>Elegí tu auto</div>
-                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
-                <div class="grid-item"><i class="fa-solid fa-clipboard-check"></i><span class="span-num">2</span>Completá la registración con tus datos</div>
-            </div>
-
-            <div class="grid-container-dos">
-                <div class="grid-item"><i class="fa-solid fa-building"></i><span class="span-num">3</span>Seleccioná un consecionario y hacé la reserva</div>
-                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
-                <div class="grid-item"><i class="fa-solid fa-hand-holding-dollar"></i><span class="span-num">4</span>Cancelá el saldo</div>
-                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
-                <div class="grid-item"><i class="fa-solid fa-people-carry-box"></i><span class="span-num">5</span>Retirá el auto</div>
-            </div>
-        </div>
-
-        <div class="uno-container">
-            <div class="container-estilo">
-            <div class="grid-item"><i class="fa-solid fa-car"></i><span class="span-num">1</span>Elegí tu auto</div>
-                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
-                <div class="grid-item"><i class="fa-solid fa-clipboard-check"></i><span class="span-num">2</span>Completá la registración con tus datos</div>
-                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
-                <div class="grid-item"><i class="fa-solid fa-building"></i><span class="span-num">3</span>Seleccioná un consecionario y hacé la reserva</div>
-                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
-                <div class="grid-item"><i class="fa-solid fa-hand-holding-dollar"></i><span class="span-num">4</span>Cancelá el saldo</div>
-                <div class="grid-item"><span class="right-arrow"><i class="fa-solid fa-arrow-right-long"></i></span></div>
-                <div class="grid-item"><i class="fa-solid fa-people-carry-box"></i><span class="span-num">5</span>Retirá el auto</div>
-            </div>
-        </div>
-
-
-        </section>
-
-    </div>
+    </main>
 
     <%- include('./partials/footer-1')%>
-    </main>
 
     <script src="/js/main.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
