arreglamos rutas y crud

--- a/src/views/detalleproducto.ejs
+++ b/src/views/detalleproducto.ejs
@@ -145,6 +145,12 @@
                 </a>
             </article>
 
+            <article class="add">
+                <a href="/products/edit/<%= modelos.idModelo%>">
+                    <button type="button">EDITAR PRODUCTO</i></button>
+                </a>
+            </article>
+
 
 
         </section>
