--- a/src/views/editarUsuario.ejs
+++ b/src/views/editarUsuario.ejs
@@ -17,13 +17,13 @@
                     <div class="correo-contra">
 
                         <label for="nombres" class="label-correo">Nombres</label>
-                        <input type="text" name="nombres" id="nombres" value="<%= usuarioToEdit.nombres %>"required>
+                        <input type="text" name="nombres" id="nombres" value="<%= usuarioToEdit.nombres %>" required>
 
                         <label for="apellidos" class="label-correo">Apellidos</label>
                         <input type="text" name="apellidos" id="apellidos" value="<%= usuarioToEdit.apellidos %>" required>
 
                         <label for="correoElectronico" class="label-correo">Correo electrónico</label>
-                        <input type="email" name="correoElectronico" id="correoElectronico" value="<%= usuarioToEdit.correoElectronico %>" required>
+                        <input type="email" name="correoElectronico" id="correoElectronico" value="<%= usuarioToEdit.email %>" required>
 
                         <label for="password" class="label-contra">Contraseña</label>
                         <input type="password" name="password" id="password"  value="<%= usuarioToEdit.password %>" required>
