--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -78,7 +78,7 @@
         <article class="productos-article">
             <% for(i=0; i<products.length; i++) { %>
                     <div class="div-producto">
-                        <a href="/products/detail/<%= products[i].imgProducto %>">
+                        <a href="/products/detail/<%= products[i].idModelo %>">
                             <img src="/imgs/products/<%=products[i].imgProducto%>" alt="imagen de producto">
                         </a>
                         <h3><%= products[i].nombreModelo %></h3>
