--- a/src/views/partials/menuResponsive.ejs
+++ b/src/views/partials/menuResponsive.ejs
@@ -10,7 +10,7 @@
     <li><a href="/carrito">Carrito</a></li>
     <li><a href="/products">Todos los productos</a></li>
     <li><a href="/users">Todos los usuarios</a></li>
-    <li><a href="/users/edit arUsuario/1">Editar Usuario</a></li>
-    <li><a href="/products/crearproducto">Crear Producto</a></li>
-    <li><a href="/products/editarproducto">Editar Producto</a></li>
+    <li><a href="/users/">Editar Usuario</a></li>
+    <li><a href="/products/create">Crear Producto</a></li>
+    <li><a href="/products">Editar Producto</a></li>
 </ul>
